plugins {
  id 'java'
  id 'maven-publish'
  id 'com.gradleup.shadow' version '9.4.1'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
}

subprojects {
  apply plugin: "java"
  apply plugin: "maven-publish"
  apply plugin: "com.gradleup.shadow"
  apply plugin: "java-library"

  group = "fr.dreamin"
  version = rootProject.findProperty("version") && rootProject.findProperty("version") != "unspecified" ? rootProject.findProperty("version") : "1.1.0"
  description = "DreamVoice"

  repositories {
    mavenCentral()
    maven { url = "https://jitpack.io" }
    maven { url = "https://repo.papermc.io/repository/maven-public/" }
    maven { url = "https://repo.codemc.org/repository/maven-public/" }
    maven { url = "https://oss.sonatype.org/content/groups/public/" }
    maven { url = "https://mvn.lumine.io/repository/maven-public/" }
    maven { url = 'https://repo.extendedclip.com/releases/' }
    maven { url = 'https://maven.maxhenkel.de/repository/public' }
  }

  // Define versions in variables for easy updating
  def mcVersion = "26.1.2"
  def paperVersion = mcVersion + ".build.+"
  def lombokVersion = "1.18.44"
  def cloudCommandFrameworkVersion = "1.8.4"
  def dreamApiVersion = "0.5.3"
  def luckPermsVersion = "5.4"
  def voiceChatVersion = "2.6.20"
  def jacksonVersion = "2.19.1"

  dependencies {
    compileOnly("io.papermc.paper:paper-api:$paperVersion")

    // Lombok for getters/setters and more
    compileOnly("org.projectlombok:lombok:$lombokVersion")
    annotationProcessor("org.projectlombok:lombok:$lombokVersion")

    // Cloud CommandFramework
    implementation("cloud.commandframework:cloud-paper:$cloudCommandFrameworkVersion")
    implementation("cloud.commandframework:cloud-annotations:$cloudCommandFrameworkVersion")

    // Jackson for JSON handling
    compileOnly("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")

    // LuckPerms API
    compileOnly("net.luckperms:api:$luckPermsVersion")

    implementation("com.github.Dreamin-MC:DreamAPI:$dreamApiVersion:all")

    compileOnly("de.maxhenkel.voicechat:voicechat-api:$voiceChatVersion")

    implementation 'com.googlecode.soundlibs:mp3spi:1.9.5-1'
    implementation 'com.googlecode.soundlibs:jlayer:1.0.1-1'
    implementation 'com.googlecode.soundlibs:tritonus-share:0.3.7-1'
  }

  def targetJavaVersion = JavaVersion.VERSION_25
  java {
    sourceCompatibility = targetJavaVersion
    targetCompatibility = targetJavaVersion
    if (JavaVersion.current() < targetJavaVersion) {
      toolchain.languageVersion.set(JavaLanguageVersion.of(targetJavaVersion.majorVersion))
    }
  }

  tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
  }

  test {
    useJUnitPlatform()
  }

}

